--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,23 @@
 [package]
-name = "fast-file-transfer"
+name = "quick-file-transfer"
 version = "0.1.0"
 edition = "2021"
+
+[[bin]]
+name = "qft"
+path = "src/main.rs"
 
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive", "env"] }
 log = "0.4.21"
 stderrlog = "0.6.0"
+lz4_flex = "0.11"
+strum = "0.26.2"
+strum_macros = "0.26.4"
+# For performance: (unsafe)
+#lz4_flex = { version = "0.11", default-features = false }
+
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
