--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,6 +11,10 @@ env:
   JUST_VERBOSE: 1
   RUSTFLAGS: "-Dwarnings" # Fail on all warnings
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   Checks:
     runs-on: ubuntu-latest
@@ -22,9 +26,9 @@ jobs:
       - name: Check
         run: cargo check
       - name: Clippy
-        run: cargo clippy -- --no-deps
+        run: cargo clippy --all --all-targets --no-deps
       - name: Check Format
-        run: cargo fmt -- --check
+        run: cargo fmt --all -- --check
       - name: Check docs
         run: cargo doc --no-deps
       - name: Audit
@@ -39,6 +43,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: Swatinem/rust-cache@v2
     - uses: extractions/setup-just@v2
     
     - name: Build
