--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   JUST_VERBOSE: 1
-  RUSTFLAGS: "-Dwarnings" # Fail on all warnings
+  RUSTFLAGS: "--deny warnings" # Fail on all warnings
 
 defaults:
   run:
@@ -18,7 +18,7 @@ defaults:
 jobs:
   Checks:
     runs-on: ubuntu-latest
-    env: 
+    env:
       CARGO_TERM_VERBOSE: true
     steps:
       - uses: actions/checkout@v4
@@ -33,22 +33,27 @@ jobs:
         run: cargo doc --no-deps
       - name: Audit
         run: cargo audit
-      
+
 
   Test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
     - uses: Swatinem/rust-cache@v2
     - uses: extractions/setup-just@v2
-    
+
     - name: Build
       run: cargo build --verbose
-    
+
     - name: Run tests
       run: cargo test --verbose
-      
+
+    - name: Test install.sh
+      run: |
+        echo TODO
+        # bash scripts/install.sh --to /tmp --tag 0.1.0
+        # /tmp/qft --version
