--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,5 +59,5 @@ jobs:
     - name: Test install.sh
       run: |
         echo TODO
-        # bash scripts/install.sh --to /tmp --tag 0.1.0
-        # /tmp/qft --version
+        bash scripts/install.sh --to /tmp --tag 0.2.0
+        /tmp/qft --version
