--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ memmap2 = "0.9.4"
 flate2 = "1.0.30"
 mdns-sd = "0.11.1"
 xz2 = "0.1.7"
-
+bzip2 = "0.4.4"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
