--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Install musl-gcc
+      if: ${{ matrix.target == 'x86_64-unknown-linux-musl' }}
+      run: sudo apt-get update && sudo apt-get install musl-tools && musl-gcc --version
+
     - name: Install AArch64 Toolchain
       if: ${{ matrix.target == 'aarch64-unknown-linux-musl' }}
       run: sudo apt-get update && sudo apt-get install gcc-aarch64-linux-gnu libc6-dev-i386
