--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ assert_fs = "1.0.13"
 assert_cmd = "2.0.11"
 predicates = "3.0.3"
 testresult = "0.4.0"
+fancy-regex = "0.13.0"
 
 [profile.release]
 lto = true
