--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,9 @@ strum_macros = "0.26.4"
 memmap2 = "0.9.4"
 lz4_flex = "0.11"
 flate2 = "1.0.30"
-mdns-sd = "0.11.1"
 xz2 = "0.1.7"
 bzip2 = "0.4.4"
+mdns-sd = { version = "0.11.1", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
@@ -42,3 +42,8 @@ lto = true
 codegen-units = 1
 panic = "abort"
 overflow-checks = false
+
+[features]
+default = ["mdns", "evaluate-compression"]
+evaluate-compression = []
+mdns = ["dep:mdns-sd"]
