--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,9 +56,8 @@ jobs:
     - name: Run Native Tests
       run: cargo test --verbose
 
-
     - name: Run Container Tests
-      if: ${{ matrix.os != 'macos-latest' }}
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       run: just d-test "--verbose -- --ignored --nocapture"
 
     - name: Test install.sh
