--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,9 @@ lz4_flex = "0.11"
 flate2 = "1.0.30"
 xz2 = "0.1.7"
 bzip2 = "0.4.4"
-mdns-sd = { version = "0.11.1", optional = true }
-comfy-table = { version = "7.1.1", optional = true }
+mdns-sd = { version = "0.11.1", optional = true }          # Feature: mdns
+comfy-table = { version = "7.1.1", optional = true }       # Feature: evaluate-compression
+ssh-rs = { version = "0.5.0", optional = true }            # Feature: ssh
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
@@ -45,6 +46,7 @@ panic = "abort"
 overflow-checks = false
 
 [features]
-default = ["mdns", "evaluate-compression"]
+default = ["mdns", "evaluate-compression", "ssh"]
 evaluate-compression = ["dep:comfy-table"]
 mdns = ["dep:mdns-sd"]
+ssh = ["dep:ssh-rs"]
