add user to docker group

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -86,6 +86,7 @@ jobs:
     - name: Run Container Tests
       if: ${{ matrix.os == 'ubuntu-latest' }}
       run: |
+        sudo usermod -a -G docker $USER
         mkdir -p ~/.ssh
         ssh-keygen -t ed25519 -f ~/.ssh/id_ed25519 -N ""
         just d-test "--verbose -- --ignored --nocapture"
