--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ mdns-sd = { version = "0.11.1", optional = true }          # Feature: mdns
 comfy-table = { version = "7.1.1", optional = true }       # Feature: evaluate-compression
 ssh-rs = { version = "0.5.0", optional = true }            # Feature: ssh
 clap_complete = "4.5.6"
+bincode = "1.3.3"
+serde = { version = "1.0.203", features = ["derive"] }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
