--- a/book/book.toml
+++ b/book/book.toml
@@ -11,5 +11,6 @@ build-dir = "build"
 
 [output.html]
 git-repository-url = "https://github.com/CramBL/quick-file-transfer"
+site-url = "/man/"
 
 [output.linkcheck]
