--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ assert_cmd = "2.0.11"
 predicates = "3.0.3"
 testresult = "0.4.0"
 fancy-regex = "0.13.0"
+rand = "0.8.5"
 
 [profile.release]
 lto = true
