--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ authors = ["Marc Beck König <mbkj@tutamail.com>"]
 repository = "https://github.com/CramBL/quick-file-transfer"
 keywords = ["file-transfer", "mdns", "dnssd", "command-line"]
 
+exclude = ["docker", "www", "book", "crates", ".github"]
+
 [[bin]]
 name = "qft"
 path = "src/main.rs"
