--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ ssh-rs = { version = "0.5.0", optional = true }            # Feature: ssh
 clap_complete = "4.5.6"
 bincode = "1.3.3"
 serde = { version = "1.0.203", features = ["derive"] }
+tracing = { version = "0.1.36", features = ["log"] }
+tracing-subscriber = { version = "^0.3" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
