use cargo nextest for container tests

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -97,7 +97,9 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         ssh-keygen -t ed25519 -f ~/.ssh/id_ed25519 -N ""
-        just d-test "--verbose -- --ignored --nocapture"
+        just mkdir-container-tmp
+        just d-setup-for-transfer-tests
+        cargo nextest run --run-ignored all container_tests --no-capture --cargo-verbose
 
     - name: Inspect Test container on failure
       if: ${{ matrix.os == 'ubuntu-latest' && failure() }}
