--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,13 @@ lz4_flex = "0.11"
 flate2 = "1.0.30"
 xz2 = "0.1.7"
 bzip2 = "0.4.4"
-mdns-sd = { version = "0.11.1", optional = true }          # Feature: mdns
-comfy-table = { version = "7.1.1", optional = true }       # Feature: evaluate-compression
-ssh-rs = { version = "0.5.0", optional = true }            # Feature: ssh
+mdns-sd = { version = "0.11.1", optional = true } # Feature: mdns
+comfy-table = { version = "7.1.1", optional = true } # Feature: evaluate-compression
+rayon = { version = "1.10.0", optional = true } # Feature: evaluate-compression
+indicatif = { version = "0.17.8", features = [
+    "rayon",
+], optional = true } # Feature: evaluate-compression
+ssh-rs = { version = "0.5.0", optional = true } # Feature: ssh
 clap_complete = "4.5.6"
 bincode = "1.3.3"
 serde = { version = "1.0.203", features = ["derive"] }
@@ -55,6 +59,6 @@ overflow-checks = false
 
 [features]
 default = ["mdns", "evaluate-compression", "ssh"]
-evaluate-compression = ["dep:comfy-table"]
+evaluate-compression = ["dep:comfy-table", "dep:rayon", "dep:indicatif"]
 mdns = ["dep:mdns-sd"]
 ssh = ["dep:ssh-rs"]
