--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ rayon = { version = "1.10.0", optional = true } # Feature: evaluate-compression
 indicatif = { version = "0.17.8", features = [
     "rayon",
 ], optional = true } # Feature: evaluate-compression
+console = { version = "0.15.8", optional = true } # Feature: evaluate-compression
 ssh-rs = { version = "0.5.0", optional = true } # Feature: ssh
 clap_complete = "4.5.6"
 bincode = "1.3.3"
@@ -59,6 +60,11 @@ overflow-checks = false
 
 [features]
 default = ["mdns", "evaluate-compression", "ssh"]
-evaluate-compression = ["dep:comfy-table", "dep:rayon", "dep:indicatif"]
+evaluate-compression = [
+    "dep:comfy-table",
+    "dep:rayon",
+    "dep:indicatif",
+    "dep:console",
+]
 mdns = ["dep:mdns-sd"]
 ssh = ["dep:ssh-rs"]
