--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,6 +6,10 @@ rustflags = ["-C", "target-feature=+crt-static"]
 rustflags = ["-C", "target-feature=+crt-static"]
 linker = "arm-linux-gnueabihf-gcc"
 
+[target.arm-unknown-linux-musleabihf]
+rustflags = ["-C", "target-feature=+crt-static"]
+linker = "arm-linux-gnueabihf-gcc"
+
 [target.aarch64-unknown-linux-musl]
 rustflags = ["-C", "target-feature=+crt-static"]
 linker = "aarch64-linux-gnu-gcc"
