--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["file-transfer", "mdns", "dnssd", "command-line"]
 
 exclude = ["docker", "www", "book", "crates", ".github"]
 
+
 [[bin]]
 name = "qft"
 path = "src/main.rs"
@@ -19,6 +20,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive", "env"] }
+clap_complete = "4.5.6"
 log = "0.4.21"
 stderrlog = "0.6.0"
 strum = "0.26.2"
@@ -36,11 +38,13 @@ indicatif = { version = "0.17.8", features = [
 ], optional = true } # Feature: evaluate-compression
 console = { version = "0.15.8", optional = true } # Feature: evaluate-compression
 ssh-rs = { version = "0.5.0", optional = true } # Feature: ssh
-clap_complete = "4.5.6"
 bincode = "1.3.3"
 serde = { version = "1.0.203", features = ["derive"] }
 tracing = { version = "0.1.36", features = ["log"] }
 tracing-subscriber = { version = "^0.3" }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+rio = { git = "https://github.com/CramBL/rio.git" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
@@ -51,6 +55,7 @@ predicates = "3.0.3"
 testresult = "0.4.0"
 fancy-regex = "0.13.0"
 rand = "0.8.5"
+criterion = { version = "0.4", features = ["html_reports"] }
 
 [profile.release]
 lto = true
@@ -68,3 +73,12 @@ evaluate-compression = [
 ]
 mdns = ["dep:mdns-sd"]
 ssh = ["dep:ssh-rs"]
+
+
+[[bench]]
+name = "bench_io_uring"
+harness = false
+
+
+[lib]
+bench = false
